<resources>
  <string name="app_name">Cotações de Moedas ByCRR - Free com Ads</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Cotações de Moedas</string>
  <string name="nav_header_subtitle">ByCRR 2020</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_sair">Sair</string>

  <string name="menu_config">Configurações</string>
  <string name="menu_coins">Moedas</string>
  <string name="menu_quotation">Cotações</string>

  <string name="config_fragment">Config Fragment. Arg: %1$s</string>
  <string name="coins_fragment">Coins Fragment. Arg: %1$s</string>
  <string name="quotation_fragment">Quotation Fragment. Arg: %1$s</string>
    <string name="txtTituloMoeda">Titulo da Moeda</string>
    <string name="txtDataHora">Data e Hora</string>
  <string name="txtValor">Valor</string>
  <string name="txtAuthor">ByCRR 2020</string>
    <string name="txtMoedaUSD">USD - Dólar Comercial</string>
  <string name="txtMoedaEUR">EUR - Euro</string>
  <string name="txtMoedaBTC">BTC - Bitcon</string>
  <string name="txtMoedaGBP">GBP - Libra Esterlina</string>
    <string name="txtMoedaUSDT">USDT - Dólar Turismo</string>
  <string name="txtMoedaCAD">CAD - Dólar Canadense</string>
  <string name="txtMoedaAUD">AUD - Dólar Australiano</string>
  <string name="txtMoedaARS">ARS - Peso Argentino</string>
  <string name="txtMoedaJPY">JPY - Iene Japonês</string>
  <string name="txtMoedaCHF">CHF - Franco Suíço</string>
  <string name="txtMoedaCNY">CNY - Yuan Chinês</string>
  <string name="txtMoedaYLS">YLS - Novo Shekel Israelense</string>
  <string name="txtMoedaLTC">LTC - Litecoin</string>
  <string name="txtMoedaETH">ETH - Ethereum</string>
  <string name="txtMoedaXRP">XRP - Ripple</string>
    <string name="txtOpcoesConfiguracao">Escolha as opções</string>
  <string name="txtMoedasParaCotacao">Escolha as moedas para cotação</string>
</resources>
