<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:ads="http://schemas.android.com/apk/res-auto"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    ads:adSize="BANNER"
    ads:adUnitId="ca-app-pub-4726235926092145/2052955998"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:gravity="center_horizontal"
    android:text="@string/txtMoedasParaCotacao"
    android:textSize="20sp"
    ads:layout_constraintEnd_toEndOf="parent"
    ads:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="90dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      app:cardCornerRadius="4dp"
      app:cardElevation="8dp">

      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">-->

        <Switch
          android:id="@+id/checkbox_btc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaBTC" />

        <Switch
          android:id="@+id/checkbox_usd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaUSD" />

        <Switch
          android:id="@+id/checkbox_eur"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaEUR" />

        <Switch
          android:id="@+id/checkbox_gbp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaGBP" />

        <Switch
          android:id="@+id/checkbox_usdt"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaUSDT" />

        <Switch
          android:id="@+id/checkbox_cad"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaCAD" />

        <Switch
          android:id="@+id/checkbox_ars"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaARS" />

        <Switch
          android:id="@+id/checkbox_aud"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaAUD" />

        <Switch
          android:id="@+id/checkbox_jpy"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaJPY" />

        <Switch
          android:id="@+id/checkbox_chf"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaCHF" />

        <Switch
          android:id="@+id/checkbox_cny"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaCNY" />

        <Switch
          android:id="@+id/checkbox_ltc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaLTC" />

        <Switch
          android:id="@+id/checkbox_eth"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaETH" />

        <Switch
          android:id="@+id/checkbox_xrp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:onClick="onCheckboxClicked"
          android:text="@string/txtMoedaXRP" />

        <!--</LinearLayout>-->
      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
